# EthEngGroupSolidityExamples

./: .gitmodules
abiencoding/contracts/: AbiEncoding.sol
advanced/: dump.txt  package-lock.json  package.json  truffle-config.js
advanced/contracts/: ContractA.sol  ContractB.sol  ContractC.sol  ContractD.sol  ContractE.sol  Proxy.sol
advanced/migrations/: 1_initial_migration.js
advanced/test/: cross_contract_call.js
ai/202304/: README.md  createstart.sh
ai/scripts/: README.md
assembler2/: README.md  compile.sh  hardhat.config.ts  package-lock.json  package.json  testProxyGetImpl.sh  testProxyGetImplBin.sh  testProxyGetImplYul.sh
assembler2/contracts/: AbiDecode.sol  Create.sol  Jump.sol  Proxy.sol  Proxy.sol.txt  Proxy2.sol  ProxyGetImpl.sol  ProxyGetImplBin.yul  ProxyGetImplYul.yul  Simple.yul  SimpleImpl.sol  TransparentProxy.yul
assembler2/test/: ProxyGetImpl.ts  (+2 more)
claim/: README.md
eip7702/: README.md
evm2/: gen.sh
rust/: Cargo.toml  README.md  config.toml  justfile
rust/crates/counter/: Cargo.toml
rust/crates/counter/src/: counter_deploy.rs  counter_existing.rs  lib.rs
rust/crates/counterex/: Cargo.toml
rust/crates/counterex/src/: counter.rs  counterdeploy.rs  lib.rs
rust/crates/tokens/src/: lib.rs
rust/deploy/: Cargo.toml
rust/deploy/contracts/: Counter.json  Counter.sol  ICounter.sol
rust/deploy/src/: main.rs
rust/solidity/: README.md
rust/solidity/cache/: solidity-files-cache.json
rust/solidity/src/: Counter.sol
rust/use-existing/: Cargo.toml
rust/use-existing/src/: main.rs
security/: gen.sh
vibe/: README.md
(+173 files in other folders)
