[workspace]
resolver = "2"
members = [
    "bin",
    "crates/*",
    ]

[workspace.dependencies]
alloy = { version = "0.9", features = [
    "full",
    "signer-keystore",
] }
alloy-transport = "0.9.2"
alloy-primitives = "0.8"
alloy-provider = { version = "0.9.2", default-features = false, features = ["reqwest"] }
alloy-sol-types = "0.8"


eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"

counter = { path = "./crates/counter" }
