[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { workspace = true }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
tokio = { workspace = true }

